# mimo-voice

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apply/: application.yaml
examples/: hello_voice.py
src/mimo_voice/: __init__.py  agent.py  cli.py  tts.py
